[gd_scene load_steps=8 format=3 uid="uid://ug7ye1ri5gke"]

[ext_resource type="Texture2D" uid="uid://dcc6agu0gev21" path="res://Sprites/Placeholder/PlaceholderLaunchThinNormal.png" id="1_h8nh0"]
[ext_resource type="Texture2D" uid="uid://cas2f2hwlyqrg" path="res://Sprites/Placeholder/PlaceholderLaunchThinPressed.png" id="2_muiy3"]
[ext_resource type="Texture2D" uid="uid://bs75e57g8c8jv" path="res://Sprites/Placeholder/PlaceholderLaunchThinHover.png" id="3_45vyu"]
[ext_resource type="Texture2D" uid="uid://dkorvdhtmyndf" path="res://Sprites/Placeholder/PlaceholderLaunchThinDisabled.png" id="4_xrv3j"]
[ext_resource type="Texture2D" uid="uid://coefn8oauxntl" path="res://Sprites/Placeholder/PlaceholderLaunchThinFocus.png" id="5_xscbi"]
[ext_resource type="Script" path="res://Scripts/launch_button.gd" id="6_dxw5t"]
[ext_resource type="Script" path="res://Scripts/key_focus_component.gd" id="7_xbwri"]

[node name="LaunchButton" type="TextureButton"]
offset_right = 120.0
offset_bottom = 28.0
disabled = true
texture_normal = ExtResource("1_h8nh0")
texture_pressed = ExtResource("2_muiy3")
texture_hover = ExtResource("3_45vyu")
texture_disabled = ExtResource("4_xrv3j")
texture_focused = ExtResource("5_xscbi")
script = ExtResource("6_dxw5t")
rocket_materials = Array[int]([12, 13, 14])
rocket_amounts = Array[int]([50, 30, 1])

[node name="TooltipMarker" type="Marker2D" parent="."]
position = Vector2(120, 0)

[node name="KeyFocusComponent" type="Node" parent="."]
script = ExtResource("7_xbwri")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
